--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "emotion-theming": "^10.0.19",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-icons": "^3.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
