--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
     "@testing-library/react": "^9.3.0",
+    "axios": "^0.19.0",
     "emotion": "^10.0.17",
     "emotion-theming": "^10.0.19",
+    "formik": "^2.0.3",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-icons": "^3.8.0",
