--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "start": "node src/server.js",
     "server": "nodemon src/server.js",
     "client": "yarn --cwd client start",
-    "dev": "concurrently -r \"yarn run server\" \"yarn run client\""
+    "dev": "concurrently -r \"yarn run server\" \"yarn run client\"",
+    "test": "jest --runInBand src/**"
   },
   "license": "UNLICENSED",
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
+    "jest": "^24.9.0",
     "mongoose": "^5.7.5",
-    "pug": "^2.0.4"
+    "superagent": "^5.1.0",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "babel-jest": "^24.9.0",
     "nodemon": "^1.19.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
