--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.0.3",
     "moment": "^2.24.0",
     "react": "^16.10.2",
+    "react-datepicker": "^2.10.0",
     "react-dom": "^16.10.2",
     "react-icons": "^3.8.0",
     "react-router": "^5.1.2",
