--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Mantas Astrauskas",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.0",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
     "@testing-library/react": "^9.3.0",
