--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "auth0-js": "^9.12.1",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
