Associate user with the mood form input
git-svn-id: https://campus.cs.le.ac.uk/svn/ma738/code/branches/master/task-activity-planner@82 1db4ce41-ffac-4b5a-a9c4-010826f1a5c3

--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
+  },
+  "proxy": {
+    "/api/*": {
+      "target": "http://[::1]:9000"
+    }
   }
 }
