--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "axios": "^0.19.0",
     "emotion": "^10.0.17",
     "emotion-theming": "^10.0.19",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3",
     "formik": "^2.0.3",
     "moment": "^2.24.0",
     "react": "^16.10.2",
