--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "server": "nodemon src/server.js",
     "client": "yarn --cwd client start",
     "dev": "concurrently -r \"yarn run server\" \"yarn run client\"",
-    "test": "jest --runInBand src/**"
+    "test": "jest --runInBand src/** --watch"
   },
   "license": "UNLICENSED",
   "dependencies": {
     "auth0-js": "^9.12.1",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
     "jest": "^24.9.0",
     "mongoose": "^5.7.5",
+    "moxios": "^0.4.0",
     "superagent": "^5.1.0",
     "supertest": "^4.0.2"
   },
