--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server": "nodemon src/server.js",
     "client": "yarn --cwd client start",
     "dev": "concurrently -r \"yarn run server\" \"yarn run client\"",
-    "test": "jest --runInBand src/** --watch"
+    "test": "_mocha src/**/*.spec.js",
+    "test-coverage": "istanbul cover _mocha src/**/*.spec.js"
   },
   "license": "UNLICENSED",
   "dependencies": {
@@ -19,17 +20,25 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
+    "istanbul": "^0.4.5",
     "jest": "^24.9.0",
+    "method-override": "^3.0.0",
+    "mocha": "^7.0.1",
     "mongoose": "^5.7.5",
     "moxios": "^0.4.0",
-    "superagent": "^5.1.0",
+    "superagent": "^5.2.1",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "@shelf/jest-mongodb": "^1.1.3",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^24.9.0",
-    "nodemon": "^1.19.4"
+    "babel-preset-env": "^1.7.0",
+    "mongodb-memory-server": "^6.2.4",
+    "nodemon": "^1.19.4",
+    "sinon": "^8.1.1"
   },
   "jest": {
     "testEnvironment": "node",
