--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@auth0/auth0-spa-js": "^1.6.0",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/react": "^9.3.0",
     "axios": "^0.19.0",
     "emotion": "^10.0.17",
@@ -23,6 +25,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "typeface-roboto": "^0.0.75",
     "yup": "^0.27.0"
   },
   "scripts": {
