--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^16.10.2",
     "react-datepicker": "^2.10.0",
     "react-dom": "^16.10.2",
+    "react-flip-move": "^3.0.4",
     "react-icons": "^3.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -31,7 +32,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
+    "test": "react-scripts test",
+    "test-coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:9000",
