--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^10.0.22",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.43",
     "@testing-library/react": "^9.3.0",
     "axios": "^0.19.0",
     "emotion": "^10.0.17",
@@ -21,7 +22,6 @@
     "react": "^16.10.2",
     "react-datepicker": "^2.10.0",
     "react-dom": "^16.10.2",
-    "react-flip-move": "^3.0.4",
     "react-icons": "^3.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
