--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,14 @@
   "author": "Mantas Astrauskas",
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.0",
+    "@date-io/luxon": "1.3.13",
+    "@date-io/moment": "1.3.13",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.43",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/react": "^9.3.0",
     "axios": "^0.19.0",
     "emotion": "^10.0.17",
@@ -18,6 +21,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.3",
     "formik": "^2.0.3",
+    "luxon": "^1.22.0",
     "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-datepicker": "^2.10.0",
