--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "client": "yarn --cwd client start",
     "dev": "concurrently -r \"yarn run server\" \"yarn run client\"",
     "test": "_mocha src/**/*.spec.js",
-    "test-coverage": "istanbul cover _mocha src/**/*.spec.js"
+    "test-coverage": "istanbul cover _mocha src/**/*.spec.js",
+    "heroku-postbuild": "cd client && yarn && yarn build"
   },
   "license": "UNLICENSED",
   "dependencies": {
@@ -45,10 +46,5 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
-  },
-  "proxy": {
-    "/api/*": {
-      "target": "http://[::1]:9000"
-    }
   }
 }
