--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^2.10.0",
     "react-dom": "^16.10.2",
     "react-icons": "^3.8.0",
+    "react-media": "^1.10.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
