--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.0.3",
     "luxon": "^1.22.0",
     "moment": "^2.24.0",
+    "node-schedule": "^1.3.2",
     "react": "^16.10.2",
     "react-datepicker": "^2.10.0",
     "react-dom": "^16.10.2",
