--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
+    "cron": "^1.8.2",
     "express": "^4.17.1",
     "istanbul": "^0.4.5",
     "jest": "^24.9.0",
