Add authentication to the API and requests
git-svn-id: https://campus.cs.le.ac.uk/svn/ma738/code/branches/master/task-activity-planner@204 1db4ce41-ffac-4b5a-a9c4-010826f1a5c3

--- a/client/src/auth_config.json
+++ b/client/src/auth_config.json
@@ -1,6 +1,7 @@
 {
   "auth": {
     "domain": "dev-b6dhqpe1.eu.auth0.com",
-    "clientId": "uz4oxXYu8rNdtc7wY8OU38IiL2fDnEV6"
+    "clientId": "uz4oxXYu8rNdtc7wY8OU38IiL2fDnEV6",
+    "audience": "https://ma738-tap.herokuapp.com/api"
   }
 }
