--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,16 @@
     "@material-ui/lab": "^4.0.0-alpha.43",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/react": "^9.3.0",
+    "auth0": "^2.24.0",
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "emotion": "^10.0.17",
     "emotion-theming": "^10.0.19",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.3",
     "formik": "^2.0.3",
+    "jwt-decode": "^2.2.0",
     "luxon": "^1.22.0",
     "moment": "^2.24.0",
     "react": "^16.10.2",
