--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "auth0": "^2.24.0",
     "auth0-js": "^9.12.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "cron": "^1.8.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^2.3.1",
     "istanbul": "^0.4.5",
     "jest": "^24.9.0",
+    "jwks-rsa": "^1.7.0",
     "method-override": "^3.0.0",
     "mocha": "^7.0.1",
     "mongoose": "^5.7.5",
