--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test-coverage": "react-scripts test --coverage",
+    "test-coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.3.0",
+    "@testing-library/jest-dom": "^5.1.1",
     "axios-mock-adapter": "^1.17.0",
     "jest-extended": "^0.11.4"
   },
