--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "client": "yarn --cwd client start",
     "dev": "concurrently -r \"yarn run server\" \"yarn run client\"",
     "test": "_mocha src/**/*.spec.js",
+    "test-client": "cd client && yarn test",
     "test-coverage": "istanbul cover _mocha src/**/*.spec.js",
     "heroku-postbuild": "cd client && yarn && yarn build"
   },
