--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ cache: yarn
 install: yarn
 
 script: yarn && yarn client-dependencies && yarn test-client
+
+
+script: echo "Running tests against $(node -v)..."
+
+jobs:
+  include:
+    - stage: Produce Coverage
+      node_js: node
+      script: cd client && jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
