--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@material-ui/pickers": "^3.2.10",
     "auth0": "^2.24.0",
     "axios": "^0.19.0",
+    "coveralls": "^3.0.11",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.17",
     "emotion-theming": "^10.0.19",
@@ -44,8 +45,8 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^9.3.0",
     "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.3.0",
     "axios-mock-adapter": "^1.17.0",
     "jest-extended": "^0.11.4"
   },
