--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^24.9.0",
     "babel-preset-env": "^1.7.0",
+    "coveralls": "^3.0.11",
     "mongodb-memory-server": "^6.2.4",
     "nodemon": "^1.19.4",
     "sinon": "^8.1.1"
