--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
   - "node"
-  - "12"
 
 cache: yarn
 install: yarn
@@ -15,4 +14,4 @@ jobs:
   include:
     - stage: Produce Coverage
       node_js: node
-      script: cd client && jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+      script: cd client && yarn test-coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
