--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ jobs:
   include:
     - stage: Produce Coverage
       node_js: node
-      script: cd client && yarn test-coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+      script: cd client && yarn && yarn test-coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
