--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@material-ui/pickers": "^3.2.10",
     "auth0": "^2.24.0",
     "axios": "^0.19.0",
+    "css-mediaquery": "^0.1.2",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.17",
     "emotion-theming": "^10.0.19",
