--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ node_js:
 cache: yarn
 install: yarn
 
-script: yarn && yarn client-dependencies && yarn test-client
+script: echo "Running tests with coverage..." && yarn && yarn client-dependencies && yarn test-client
