--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 cache: yarn
 install:
   - yarn
-  - yarn global add codecov
+  - yarn add codecov --dev
 
 env:
   global:
@@ -14,6 +14,7 @@ env:
 
 script:
   - echo "Running tests with coverage..." && yarn && yarn client-dependencies && yarn test-client
+  - ./node_modules/.bin/codecov
 
 after_success:
   - PWD=WORKSPACE bash <(curl -s https://codecov.io/bash) -t CODECOV_TOKEN
