--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "client-install": "yarn --cwd client",
     "start": "node src/server.js",
-    "server": "nodemon src/server.js",
+    "server": "nodemon --exec babel-node src/server.js",
     "client": "yarn --cwd client start",
     "dev": "concurrently -r \"yarn run server\" \"yarn run client\"",
     "test-server": "jest --watchAll=true",
@@ -37,20 +37,22 @@
     "mocha": "^7.0.1",
     "mongoose": "^5.7.5",
     "moxios": "^0.4.0",
-    "superagent": "^5.2.1",
-    "supertest": "^4.0.2"
+    "superagent": "^5.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.7.1",
     "@shelf/jest-mongodb": "^1.1.3",
-    "babel-cli": "^6.26.0",
     "babel-jest": "^24.9.0",
-    "babel-preset-env": "^1.7.0",
     "codecov": "^3.6.5",
+    "mock-jwks": "^0.3.0",
     "mongodb-memory-server": "^6.2.4",
+    "nock": "^12.0.3",
     "nodemon": "^1.19.4",
-    "sinon": "^8.1.1"
+    "sinon": "^8.1.1",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node",
