--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Mantas Astrauskas",
   "main": "server.js",
   "scripts": {
+    "build": "babel index.js --out-file index-compiled.js",
     "client-install": "yarn --cwd client",
     "start": "node src/server.js",
     "server": "nodemon --exec babel-node src/server.js",
@@ -25,6 +26,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
+    "core-js": "^3.6.4",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -37,6 +39,7 @@
     "mocha": "^7.0.1",
     "mongoose": "^5.7.5",
     "moxios": "^0.4.0",
+    "regenerator-runtime": "^0.13.5",
     "superagent": "^5.2.1"
   },
   "devDependencies": {
