Add example to env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 AUTH0_AUDIENCE={API_IDENTIFIER}
 AUTH0_DOMAIN={DOMAIN}
+
+DB_USER={DB_USER}
+DB_PASSWORD={DB_PASSWORD}
+DB_URL={MONGODB_URL}
+DB_ENV_PROD={DATABASE_NAME}
+DB_ENV_TEST={DATABASE_NAME}
