--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jwks-rsa": "^1.7.0",
     "method-override": "^3.0.0",
     "mocha": "^7.0.1",
+    "mongo-mock": "^4.0.0",
     "mongoose": "^5.7.5",
     "moxios": "^0.4.0",
     "regenerator-runtime": "^0.13.5",
@@ -49,7 +50,7 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.7.1",
-    "@shelf/jest-mongodb": "^1.1.3",
+    "@shelf/jest-mongodb": "^1.1.5",
     "babel-jest": "^24.9.0",
     "codecov": "^3.6.5",
     "mock-jwks": "^0.3.0",
@@ -60,7 +61,7 @@
     "supertest": "^4.0.2"
   },
   "jest": {
-    "testEnvironment": "node",
+    "preset": "@shelf/jest-mongodb",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
