--- a/client/src/auth_config.json
+++ b/client/src/auth_config.json
@@ -2,6 +2,6 @@
   "auth": {
     "domain": "dev-b6dhqpe1.eu.auth0.com",
     "clientId": "uz4oxXYu8rNdtc7wY8OU38IiL2fDnEV6",
-    "audience": "https://ma738-tap.herokuapp.com/api"
+    "audience": "https://tap-web-app.herokuapp.com/api"
   }
 }
