--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^24.9.0",
     "jwks-rsa": "^1.7.0",
     "mongoose": "^5.7.5",
+    "prettier": "^2.0.5",
     "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
