--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "license": "MIT",
   "author": "Mantas Astrauskas",
   "scripts": {
     "start": "react-scripts start",
@@ -22,7 +22,6 @@
     "auth0": "^2.24.0",
     "axios": "^0.19.0",
     "css-mediaquery": "^0.1.2",
-    "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
     "enzyme": "^3.11.0",
@@ -47,6 +46,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.3.0",
     "axios-mock-adapter": "^1.17.0",
+    "clsx": "^1.1.1",
     "jest-extended": "^0.11.4"
   },
   "proxy": "http://localhost:9000",
